rev-proxy-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: rev-proxy
  name: rev-proxy
spec:
  replicas: 3
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: rev-proxy
    spec:
      containers:
      - env:
        - name: GET_HOSTS_FROM
          value: dns
        image: compose:latest
        name: rev-proxy
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
status: {}
