rev-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: rev-proxy
  name: rev-proxy
spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 80
  selector:
    io.kompose.service: rev-proxy
status:
  loadBalancer: {}
