ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingres
spec:
  backend:
    serviceName: rev-proxy
    servicePort: 80
